--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# espnet @ git+https://github.com/espnet/espnet.git
 espnet-model-zoo
 espnet
 datasets
@@ -12,20 +11,17 @@ jaxlib==0.4.9
 ml_dtypes==0.2.0
 transformers
 torch
-# Clone and install ParallelWaveGAN from GitHub
-# parallel-wavegan @ git+https://github.com/ftshijt/ParallelWaveGAN.git@master
-
 pyopenjtalk
 pypinyin==0.44.0
 gdown==4.4.0
 ipywebrtc
-# Upgrade to latest parallel_wavegan from PyPI (optional if above is used)
 parallel_wavegan
 gradio
-# espnetez
 huggingface_hub
 IPython
 pydantic==2.10.6 #neccessary for gradio (update issue)
 torchaudio
 transformers
 dotenv
+parallel_wavegan==0.5.4 #for TTS
+scipy==1.10.0 #For parallel_wavegan  need this version
